# ai-agent

./: .gitignore  Dockerfile  agent.py  bot.py  local_env.yml  pyproject.toml  requirements.txt  server.py  web.config
.github/workflows/: dodobot.yml
helpers/: token_helpers.py
kernel/: kernel_builder.py
plugins/: box_plugin.py  cloud_plugin_manager.py  dropbox_plugin.py  gmail_plugin.py  google_calendar_plugin.py  google_drive_plugin.py
services/: box_models.py  box_service.py  dropbox_service.py  gmail_service.py  google_calendar_service.py  google_drive_service.py
