[project]
name = "ai-agent"
version = "0.1.0"
description = "Discord bot for cloud workspace integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts==0.2.1",
    "discord-py==2.4.0",
    "mistralai==1.4.0",
    "python-dotenv==1.0.0",
    "fastapi==0.111.0",
    "uvicorn==0.27.1",
    "cryptography==41.0.8",
    "requests==2.32.3",
    "semantic-kernel==1.23.1",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client==2.163.0",
    "aiohttp==3.11.11",
    "httpx==0.27.0",
    "pydantic==2.6.3",
    "pydantic-settings==2.7.1",
]